--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,6 +11,20 @@ html {
 main {
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+.modal-content {
+	background-color: #f0f8ff !important; /* Light blue */
+}
+
+/* Change modal backdrop color (semi-transparent) */
+.modal-backdrop {
+background-color: rgba(0, 123, 255, 0.5); /* Light blue with transparency */
+}
+
 .sidenav {
 	color: #FFFFFF;
 	background-color: #182B38;
