feature: implement picture updating

--- a/backend/Django_backend_project/templates/auth_app/register.htm
+++ b/backend/Django_backend_project/templates/auth_app/register.htm
@@ -355,6 +355,8 @@
 
 
 		document.getElementById('profilePicture').addEventListener('change', function (event) {
+			// console.log("event : ");
+			
 			const file = event.target.files[0];
 			if (file) {
 				const reader = new FileReader();
