feature: profile image update done

--- a/backend/Django_backend_project/templates/auth_app/register.htm
+++ b/backend/Django_backend_project/templates/auth_app/register.htm
@@ -112,7 +112,7 @@
 					</div>
 
 					<!-- 2FA Method Selection -->
-					<div id="2faSetup" style="display: none;">
+					<div id="2faSetup">
 						<label for="method">Select a 2FA Method:</label>
 						<select id="method">
 							<option value="totp">Authenticator App</option>
