--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -144,6 +144,19 @@ i {
 	height: 200px;
 }
 
+#v-pills-tab {
+	padding-right: 50px !important;
+	height: 40vh;
+}
+
+#v-pills-tabContent {
+	padding-left: 50px !important;
+}
+
+#tabsContainer {
+	height: 40vh;
+}
+
 @media (max-width: 868px) {
     .homebtn {
         height: 60px;
