--- a/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
+++ b/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
@@ -18,7 +18,7 @@
     <div class="container text-center mt-5">
         <h1>Pong Game</h1>
         <canvas id="gameCanvas" width="800" height="400"></canvas>
-        <div class="mt-3">
+        <div id="buttons">
             <button id="startGame" class="btn btn-primary">Start Game</button>
             <button id="pauseGame" class="btn btn-warning">Pause Game</button>
             <button id="resumeGame" class="btn btn-success">Resume Game</button>
