--- a/backend/Django_backend_project/templates/auth_app/register.htm
+++ b/backend/Django_backend_project/templates/auth_app/register.htm
@@ -60,7 +60,9 @@
         <div id="dashboard" style="display: none;">
             <h2>Dashboard</h2>
             <button id="logoutButton">Logout</button>
-            
+            <div style="margin-top:5%">
+                <button><a href="{% url 'game_ui' %}" >Start Game</a> </button>
+            </div>
             <!-- Online Users -->
             <div id="onlineUsers">
                 <h3>Online Users</h3>
@@ -291,8 +293,12 @@
 
 				if (response.ok) {
 					const data = await response.json();
+					console.log("data in login: ", data);
+					const user_id = data.user_id;
+					console.log("user_id in login: ", user_id);
 					// Store username in local storage 
 					localStorage.setItem('username', username);
+					localStorage.setItem('userId', user_id);
 					localStorage.setItem('isAuthenticated', 'true');
 					if (otpMethod && otpCode) {
 						localStorage.setItem('otpMethod', 'true');
@@ -370,6 +376,7 @@
 				localStorage.removeItem('username');
 				localStorage.removeItem('isAuthenticated');
 				localStorage.removeItem('otpMethod');
+				localStorage.removeItem('userId');
 				showAuthSection(); // Redirect to authentication page
 			}
 		}
